tests/sksl/errors/SwizzleOutOfBounds.glsl
### Compilation failed:

error: 1: invalid swizzle component 'z'
void func() { float3 test = float2(1).xyz; }
                                        ^
1 error
